# document_signer_for_pdf

./: pyproject.toml  requirements.txt
document_signer_for_pdf/: __init__.py
