[project]
name = "document_signer_for_pdf"
version = "0.0.1"
description = "Document Signer for PDF is a robust digital signing solution designed to streamline and secure the process of signing PDF documents."
authors = [
    {name = "SVNIX Solutions", email = "contact@svnix.solutions"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "license.txt"}

dependencies = [
    "pyHanko[pkcs11,image-support,opentype,xmp]~=0.20.1",
    "PyPDF2~=3.0.1",
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "document_signer_for_pdf"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
